Added Activities Page and layoout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".HotelActivity" />
         <activity android:name=".ItineraryActivity" />
         <activity android:name=".SettingsActivity" />
+        <activity android:name=".ActivitiesActivity"></activity>
     </application>
 
 </manifest>
