--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".HotelActivity" />
         <activity android:name=".ItineraryActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".ActivitiesActivity"></activity>
+        <activity android:name=".ActivitiesActivity" />
+        <activity android:name=".TransportationActivity"></activity>
     </application>
 
 </manifest>
