Created Specfic Food Page and Linked Food Options to Specfic Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".CustomListAdapter"
             android:screenOrientation="portrait"/>
+        <activity android:name=".SpecificFoodActivity"/>
     </application>
 
 </manifest>
