--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.3.0'
+    implementation 'com.github.iammert:ExpandableLayout:1.4.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
 }
 
